[gd_scene load_steps=4 format=3 uid="uid://bg0rm6qe5hcqx"]

[ext_resource type="LabelSettings" uid="uid://cgoctadgfxmw" path="res://HUDLABEL.tres" id="1_0dyy3"]
[ext_resource type="Script" path="res://hud/hud.gd" id="1_bofb4"]
[ext_resource type="LabelSettings" uid="uid://b52gkjvibwxdj" path="res://hud/HUDLABEL.tres" id="2_mb0ip"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_bofb4")

[node name="Menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 25.0
offset_top = 12.0
offset_right = 99.0
offset_bottom = 107.0
text = "0"
label_settings = ExtResource("1_0dyy3")

[node name="TiempoLabel" type="Label" parent="Menu"]
layout_mode = 0
offset_left = 390.0
offset_top = 13.0
offset_right = 464.0
offset_bottom = 108.0
text = "0"
label_settings = ExtResource("1_0dyy3")

[node name="InicioLabel" type="Label" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -164.0
offset_top = -47.5
offset_right = 164.0
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
text = "PERSIGUE LA MONEDA"
label_settings = ExtResource("2_mb0ip")
horizontal_alignment = 1

[node name="Button" type="Button" parent="Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = 39.0
offset_right = 113.0
offset_bottom = 108.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 30
text = "INICIAR"

[node name="MensajeTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="pressed" from="Menu/Button" to="." method="_on_button_pressed"]
[connection signal="timeout" from="MensajeTimer" to="." method="_on_mensaje_timer_timeout"]
